# rust-aws-iam

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
og_tests/: examples.rs  model.rs
og_tests/data/good/: example-002.json  example-003.json  example-006.json  example-007.json  example-012.json  example-017.json  example-019.json  example-020.json  example-023.json  example-025.json  example-029.json  example-030.json
src/: #lib.rs#  constants.rs  error.rs  lib.rs  syntax.rs
src/context/: mod.rs
src/document/: latex.rs  markdown.rs  mod.rs  visitor.rs
src/io/: mod.rs
src/model/: action.rs  arn.rs  builder.rs  condition.rs  containers.rs  effect.rs  id.rs  impls.rs  mod.rs  naming.rs  policy.rs  principal.rs  qstring.rs  resource.rs  statement.rs  types.rs  version.rs  visitor.rs
src/model/builder/: action.rs  condition.rs  mod.rs  policy.rs  principal.rs  resource.rs  statement.rs
src/offline/: mod.rs  operators.rs  policy.rs  request.rs  statement.rs  trace.rs  variables.rs
src/report/: latex.rs  markdown.rs  mod.rs  visitor.rs
src/service/: mod.rs
tests/: examples.rs  model.rs  model_action.rs  model_condition.rs  model_effect.rs  model_naming.rs  model_policy.rs  model_principal.rs  model_resource.rs  model_statement.rs  model_version.rs
tests/data/bad/: example-001.json  example-001.txt
tests/data/good/: example-001.json  example-004.json  example-005.json  example-007.json  example-009.json  example-010.json  example-011.json  example-013.json  example-014.json  example-015.json  example-016.json  example-018.json  example-021.json  example-022.json  example-027.json  example-028.json
