[package]
name = "aws-iam"
version = "0.2.1"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "A Rust crate for dealing with AWS IAM Policy resources"
documentation = "https://docs.rs/aws-iam/"
repository = "https://github.com/johnstonskj/rust-aws-iam.git"
license = "MIT"
readme = "README.md"
publish = true
default-run = "policy"

[[bin]]
name = "policy"
path = "src/bin/policy.rs"
required-features = ["command_line", "offline_eval"]

[features]
default = []
command_line = ["document", "offline_eval", "structopt", "tracing-subscriber"]
document = []
offline_eval = ["tracing"]
service_config = ["toml"]

[dependencies]
uuid = { version = "1.1.2", features = ["serde", "v4"] }
lazy_static = "1.4.0"
regex = "1.3.7"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"

# Command-Line feature dependencies
structopt = { optional = true, version = "0.3.14" }
tracing = { optional = true, version = "0.1.14" }
tracing-subscriber = { optional = true, version = "0.3.11", features = ["env-filter"] }

# Service Config feature dependencies
toml = { optional = true, version = "0.5.6" }

[dev-dependencies]
test-generator = "0.3.0"
