[package]
name = "aws-iam"
version = "0.3.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "A crate for dealing with AWS IAM Policy resources"
documentation = "https://docs.rs/aws-iam/"
repository = "https://github.com/johnstonskj/rust-aws-iam.git"
license = "MIT"
readme = "README.md"
publish = true
default-run = "policy"

[[bin]]
name = "policy"
path = "src/bin/policy.rs"
required-features = ["command_line"]

[features]
default = []
command_line = ["document", "offline_eval", "structopt", "tracing-subscriber"]
document = []
offline_eval = []
service_config = []

[dependencies]
aws-arn = "0.2.1"
lazy_static = "1.4"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.1", features = ["serde", "v4"] }

chrono = { version = "0.4", optional = true }

# Command-Line feature dependencies
structopt = { optional = true, version = "0.3" }
tracing-subscriber = { optional = true, version = "0.3", features = ["env-filter"] }

[dev-dependencies]
test-generator = "0.3"
doc-comment = "0.3"
